--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	 <button id="getWeatherBtn">Get Current Weather</button>
-    <div id="weatherData"></div>
-
+	<h1>Weather API</h1>
+	<button type="button" onclick="getCurrentWeather()">Get current Weather</button>
+	<div id='weatherData'></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
