--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Weather API</h1>
-	<button type="button" onclick="getCurrentWeather()">Get current Weather</button>
+	<button type="button" onclick="getCurrentWeather()">Get Current Weather</button>
 	<div id='weatherData'></div>
     <script type="text/javascript" src="./script.js">
 </script>
